--- a/PROJET RESTAURANT/CODE DEPART/application/www/LayoutView.phtml
+++ b/PROJET RESTAURANT/CODE DEPART/application/www/LayoutView.phtml
@@ -56,7 +56,7 @@
 
 
           <li class="layout-right">
-            <p class="welcome">Bonjour <strong> </strong> !</p>
+            <p class="welcome">Bonjour <strong>  <?= $_SESSION['firstName']; ?> </strong> !</p>
             <a class="button button-primary" href="<?=$requestUrl?>/user/logout">Déconnexion</a>
         </li>
 
