--- a/PROJET RESTAURANT/CODE DEPART/application/www/order/validate/ValidateView.phtml
+++ b/PROJET RESTAURANT/CODE DEPART/application/www/order/validate/ValidateView.phtml
@@ -23,9 +23,9 @@
     <thead>
         <tr>
             <th>Nom</th>
-            <th class="quantite">Quantité</th>
-            <th class="prixUnitaire">Prix Unitaire</th>
-            <th class="prixTotal">Prix Total</th>
+            <th class="number">Quantité</th>
+            <th class="number">Prix Unitaire</th>
+            <th class="number">Prix Total</th>
         </tr>
     </thead>
     <tfoot>
